--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -28,91 +28,86 @@
         app:mcv_selectionMode="none"
         app:mcv_showOtherDates="none"
         app:mcv_weekDayTextAppearance="@style/CustomCalendarDay"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="0dp"
+        app:mcv_tileHeight="58dp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="0dp">
+        tools:layout_editor_absoluteX="1dp">
 
         <TextView
             android:id="@+id/plainText2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_width="16dp"
+            android:layout_height="43dp"
+            android:layout_marginStart="14dp"
             android:text="•"
             android:textColor="@color/dotAzul"
             android:textSize="50dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView7"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView7" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/plainText3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="16dp"
+            android:layout_height="43dp"
             android:layout_below="@+id/plainText2"
-            android:layout_marginStart="96dp"
+            android:layout_marginStart="14dp"
             android:text="•"
             android:textColor="@color/dotVermelho"
             android:textSize="50dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView8"
-            app:layout_constraintStart_toEndOf="@+id/textView8"
-            app:layout_constraintTop_toTopOf="@+id/textView8"
-            app:layout_constraintVertical_bias="0.574" />
+            app:layout_constraintBottom_toBottomOf="@+id/textView6"
+            app:layout_constraintStart_toEndOf="@+id/textView9" />
 
         <TextView
             android:id="@+id/plainText4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="16dp"
+            android:layout_height="43dp"
             android:layout_below="@+id/plainText3"
-            android:layout_marginStart="120dp"
+            android:layout_marginStart="14dp"
             android:text="•"
             android:textColor="@color/dotLaranja"
             android:textSize="50dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView9"
-            app:layout_constraintStart_toEndOf="@+id/textView7"
-            app:layout_constraintTop_toTopOf="@+id/textView9" />
+            app:layout_constraintStart_toEndOf="@+id/textView8" />
 
         <TextView
             android:id="@+id/plainText5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="16dp"
+            android:layout_height="43dp"
             android:layout_below="@+id/plainText4"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="14dp"
             android:text="•"
             android:textColor="@color/dotVerde"
             android:textSize="50dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView8"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView8" />
+            app:layout_constraintStart_toEndOf="@+id/textView7" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView7"
+            android:layout_marginStart="4dp"
             android:layout_toEndOf="@+id/plainText5"
             android:fontFamily="@font/roboto"
             android:text="Bebida"
             android:textColor="@color/dotVermelho"
             android:textFontWeight="600"
             android:textSize="15dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.16"
+            app:layout_constraintHorizontal_bias="0.145"
             app:layout_constraintStart_toEndOf="@+id/plainText3"
-            app:layout_constraintTop_toBottomOf="@+id/textView9"
-            app:layout_constraintVertical_bias="0.489" />
+            tools:layout_editor_absoluteY="116dp" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="4dp"
             android:layout_toEndOf="@+id/plainText4"
             android:fontFamily="@font/roboto"
             android:text="Sono"
@@ -120,39 +115,37 @@
             android:textFontWeight="600"
             android:textSize="15dp"
             app:layout_constraintStart_toEndOf="@+id/plainText2"
-            app:layout_constraintTop_toTopOf="parent" />
+            tools:layout_editor_absoluteY="116dp" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView9"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="4dp"
             android:layout_toEndOf="@+id/plainText3"
             android:fontFamily="@font/roboto"
             android:text="Remédio"
             android:textColor="@color/dotVerde"
             android:textFontWeight="600"
             android:textSize="15dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/plainText5"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            tools:layout_editor_absoluteY="116dp" />
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView6"
+            android:layout_marginStart="4dp"
             android:layout_toEndOf="@+id/plainText2"
             android:fontFamily="@font/roboto"
             android:text="Exercício"
             android:textColor="@color/dotLaranja"
             android:textFontWeight="600"
             android:textSize="15dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.157"
             app:layout_constraintStart_toEndOf="@+id/plainText4"
-            app:layout_constraintTop_toTopOf="parent" />
+            tools:layout_editor_absoluteY="117dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
