Redefinição de layout do PerfilFragment

--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -1,82 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    android:scrollbarAlwaysDrawHorizontalTrack="true"
-    tools:context=".fragment.PerfilFragment">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/txtBoasVindas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Olá, \n"
-        android:textColor="#0F184C"
-        android:textSize="40dp"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        app:layout_constraintBottom_toTopOf="@+id/btnEditarPerfil"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <RelativeLayout
+            android:id="@+id/profile_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#0F184C"
+            android:elevation="4dp"
+            android:paddingBottom="24dp">
 
-    <Button
-        android:id="@+id/btnEditarPerfil"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="200dp"
-        android:backgroundTint="#0F184C"
-        android:text="Editar perfil"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:cornerRadius="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/txtBoasVindas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="25dp"
+                android:textSize="42dp"
+                android:textStyle="bold"
+                android:textColor="#F3C641"/>
 
-    <Button
-        android:id="@+id/btnNotificacoes"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:backgroundTint="#0F184C"
-        android:text="Notificações"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:cornerRadius="4dp"
-        app:layout_constraintEnd_toEndOf="@+id/btnEditarPerfil"
-        app:layout_constraintStart_toStartOf="@+id/btnEditarPerfil"
-        app:layout_constraintTop_toBottomOf="@+id/btnEditarPerfil" />
+        </RelativeLayout>
 
-    <Button
-        android:id="@+id/btnConfiguracao"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:backgroundTint="#0F184C"
-        android:text="Configurações"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:cornerRadius="4dp"
-        app:layout_constraintEnd_toEndOf="@+id/btnNotificacoes"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/btnNotificacoes"
-        app:layout_constraintTop_toBottomOf="@+id/btnNotificacoes" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/profile_layout"
+            android:layout_marginTop="5dp"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btnSair"
-        android:layout_width="125dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:backgroundTint="#0F184C"
-        android:text="Sair"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:cornerRadius="4dp"
-        app:layout_constraintEnd_toEndOf="@+id/btnConfiguracao"
-        app:layout_constraintStart_toStartOf="@+id/btnConfiguracao"
-        app:layout_constraintTop_toBottomOf="@+id/btnConfiguracao" />
+            <TextView
+                android:id="@+id/txtEditarPerfil"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:background="#fff"
+                android:clickable="true"
+                android:elevation="4dp"
+                android:padding="20dp"
+                android:text="Editar perfil"
+                android:textColor="#0F184C"
+                android:textSize="18dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/txtNotificacoes"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_marginBottom="3dp"
+                android:layout_marginTop="3dp"
+                android:background="#fff"
+                android:clickable="true"
+                android:elevation="4dp"
+                android:padding="20dp"
+                android:text="Notificações"
+                android:textColor="#0F184C"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/txtConfiguracoes"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:background="#fff"
+                android:clickable="true"
+                android:elevation="4dp"
+                android:padding="20dp"
+                android:text="Configurações"
+                android:textColor="#0F184C"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/txtSair"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_marginBottom="3dp"
+                android:layout_marginTop="3dp"
+                android:background="#fff"
+                android:clickable="true"
+                android:elevation="4dp"
+                android:padding="20dp"
+                android:text="Sair"
+                android:textColor="#0F184C"
+                android:textSize="18dp" />
+
+        </LinearLayout>
+    </RelativeLayout>
+</ScrollView>
