--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,7 +30,7 @@
 
     <color name="graficoCorFundo">#FFFFFF</color>
     <color name="graficoCorRotuloEixos">#0F184C</color>
-    <color name="graficoCorGrade">#0F184C</color>
+    <color name="graficoCorGrade">#9fadfc</color>
     <color name="graficoCorPontoMarcado">#0F184C</color>
     <color name="graficoCorLinhaEntrePontos">#0F184C</color>
 
