Subevento - troca de botões por checkbox

--- a/app/src/main/res/layout/fragment_diario.xml
+++ b/app/src/main/res/layout/fragment_diario.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginBottom="4dp"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintBottom_toTopOf="@+id/layoutBotoesEvento"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,9 +36,9 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/layoutBotoesEvento"
         android:layout_width="370dp"
-        android:layout_height="85dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -102,21 +102,100 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
-        android:layout_width="374dp"
+        android:id="@+id/layoutNomesEvento"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layoutBotoesEvento">
+
+        <TextView
+            android:id="@+id/txtNomeEventoSono"
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="14dp"
+            android:background="@android:color/transparent"
+
+            android:text="Sono"
+            android:textColor="#101951"
+            android:textAlignment="center"
+            android:textSize="12dp"
+            android:paddingTop="0dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.4" />
+
+        <TextView
+            android:id="@+id/txtNomeEventoExercicio"
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="14dp"
+            android:background="@android:color/transparent"
+
+            android:text="Exercício"
+            android:textColor="#101951"
+            android:textAlignment="center"
+            android:textSize="12dp"
+            android:paddingTop="0dp"
+
+            app:layout_constraintStart_toEndOf="@+id/txtNomeEventoSono"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtNomeEventoRemedio"
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="14dp"
+            android:background="@android:color/transparent"
+
+            android:text="Remédio"
+            android:textColor="#101951"
+            android:textAlignment="center"
+            android:textSize="12dp"
+            android:paddingTop="0dp"
+
+            app:layout_constraintStart_toEndOf="@+id/txtNomeEventoExercicio"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtNomeEventoBebida"
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+
+            android:text="Bebida"
+            android:textColor="#101951"
+            android:textAlignment="center"
+            android:textSize="12dp"
+            android:paddingTop="0dp"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txtNomeEventoRemedio"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.4" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutBotoesSubEvento"
+        android:layout_width="360dp"
         android:layout_height="100dp"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginLeft="50dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+        app:layout_constraintTop_toBottomOf="@+id/layoutNomesEvento">
 
-        <Button
-            android:id="@+id/btnSonoDeitar"
+        <CheckBox
+            android:id="@+id/chkSonoDeitar"
             android:layout_width="165dp"
             android:layout_height="50dp"
-            android:backgroundTint="#F3C641"
             android:text="Deitar"
             android:textColor="#071025"
-            app:cornerRadius="4dp"
+            android:textSize="20dp"
+            android:buttonTint="#F3C641"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.076"
@@ -124,14 +203,14 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.091" />
 
-        <Button
-            android:id="@+id/btnSonoLevantar"
+        <CheckBox
+            android:id="@+id/chkSonoLevantar"
             android:layout_width="165dp"
             android:layout_height="50dp"
-            android:backgroundTint="#0F184C"
             android:text="Levantar"
-            android:textColor="#FFFFFF"
-            app:cornerRadius="4dp"
+            android:textColor="#071025"
+            android:textSize="20dp"
+            android:buttonTint="#F3C641"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.923"
@@ -139,14 +218,14 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.094" />
 
-        <Button
-            android:id="@+id/btnBebidaCafe"
+        <CheckBox
+            android:id="@+id/chkBebidaCafe"
             android:layout_width="165dp"
             android:layout_height="50dp"
-            android:backgroundTint="#F3C641"
             android:text="Café"
             android:textColor="#071025"
-            app:cornerRadius="4dp"
+            android:textSize="20dp"
+            android:buttonTint="#F3C641"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.077"
@@ -154,14 +233,14 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.093" />
 
-        <Button
-            android:id="@+id/btnBebidaCha"
+        <CheckBox
+            android:id="@+id/chkBebidaCha"
             android:layout_width="165dp"
             android:layout_height="50dp"
-            android:backgroundTint="#0F184C"
             android:text="Chá"
-            android:textColor="#FFFFFF"
-            app:cornerRadius="4dp"
+            android:textColor="#071025"
+            android:textSize="20dp"
+            android:buttonTint="#F3C641"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.922"
@@ -169,32 +248,32 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.093" />
 
-        <Button
-            android:id="@+id/btnBebidaAlcool"
+        <CheckBox
+            android:id="@+id/chkBebidaRefrigerante"
             android:layout_width="165dp"
             android:layout_height="50dp"
-            android:backgroundTint="#0F184C"
-            android:text="Álcool"
-            android:textColor="#FFFFFF"
-            app:cornerRadius="4dp"
+            android:text="Refrigerante"
+            android:textColor="#071025"
+            android:textSize="20dp"
+            android:buttonTint="#F3C641"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.928"
+            app:layout_constraintHorizontal_bias="0.073"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
 
-        <Button
-            android:id="@+id/btnBebidaRefrigerante"
+        <CheckBox
+            android:id="@+id/chkBebidaAlcool"
             android:layout_width="165dp"
             android:layout_height="50dp"
-            android:backgroundTint="#0F184C"
-            android:text="Refrigerante"
-            android:textColor="#FFFFFF"
-            app:cornerRadius="4dp"
+            android:text="Álcool"
+            android:textColor="#071025"
+            android:textSize="20dp"
+            android:buttonTint="#F3C641"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.073"
+            app:layout_constraintHorizontal_bias="0.928"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
@@ -208,7 +287,7 @@
         android:layout_marginTop="0dp"
         android:theme="@style/MyTimePicker"
         android:timePickerMode="spinner"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/layoutBotoesSubEvento"
         tools:layout_editor_absoluteX="11dp" />
 
     <EditText
